<resources>
    <string name="app_name">JustTV</string>
    <string name="facebook_app_id">1216155865167075</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_autentification_main">AutentificationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="double_click_snackbar">"Please click BACK again to exit!"</string>

    <string name="title_nav_all_chanels">Всі канали</string>
    <string name="title_nav_ua_chanels">Українські канали</string>
    <string name="title_nav_ru_chanels">Російські канали</string>,
    <string name="title_nav_dodatkovo">Додатково</string>
    <string name="title_nav_about_app">Про додаток</string>

    <string-array name="title_chanels">
        <item>2x2</item>
        <item>Cartoon Network</item>
        <item>Disney</item>
        <item>Enter-фільм</item>
        <item>НСТ</item>
        <item>ICTV</item>
        <item>LifeNews</item>
        <item>RU TV</item>
        <item>Боец</item>
        <item>Домашний</item>
        <item>Звезда</item>
        <item>Інтер</item>
        <item>Інтер+</item>
        <item>К1</item>
        <item>К2</item>
        <item>Канал 24</item>
        <item>Карусель</item>
        <item>Матч ТВ</item>
        <item>Мега</item>
        <item>Моя планета</item>
        <item>Новий канал</item>
        <item>НТВ</item>
        <item>НТН</item>
        <item>Первый канал</item>
        <item>Пятница</item>
        <item>Пятый канал</item>
        <item>Рен ТВ</item>
        <item>Россия 1</item>
        <item>Россия 24</item>
        <item>Россия К</item>
        <item>РТР-Планета</item>
        <item>СТБ</item>
        <item>СТС</item>
        <item>СТС Love</item>
        <item>ТВ 3</item>
        <item>ТВ Центр</item>
        <item>ТНТ</item>
        <item>Україна</item>
        <item>Че (Перец) </item>
        <item>ТНТ4</item>
        <item>5 Канал</item>
        <item>Спорт 1</item>
        <item>Тоніс</item>
        <item>Піксель</item>
        <item>Муз-ТВ</item>
        <item>Paramount Comedy</item>
        <item>MTV Россия</item>
        <item>TV XXI (TV21)</item>
        <item>Комедия ТВ</item>
        <item>Дом Кино</item>
    </string-array>

    <string-array name="url_chanels">
        <item>https://chas.tv/channel/2x2</item>
        <item>https://chas.tv/channel/cartoon-network</item>
        <item>https://chas.tv/channel/disney</item>
        <item>http://vsitv.org/enter-film.html</item>
        <item>https://chas.tv/channel/nst</item>
        <item>http://vsitv.org/uaictv.html</item>
        <item>https://chas.tv/channel/lifenews</item>
        <item>https://chas.tv/channel/rutv</item>
        <item>https://chas.tv/channel/boec</item>
        <item>https://chas.tv/channel/domashnii</item>
        <item>https://chas.tv/channel/zvezda</item>
        <item>http://vsitv.org/inter.html</item>
        <item>http://vsitv.org/interplus.html</item>
        <item>http://vsitv.org/k1.html</item>
        <item>http://vsitv.org/k2.html</item>
        <item>http://vsitv.org/24-telekanal-novin.html</item>
        <item>https://chas.tv/channel/karusel</item>
        <item>https://chas.tv/channel/match-tv</item>
        <item>http://vsitv.org/mega.html</item>
        <item>https://chas.tv/channel/moya-planeta</item>
        <item>http://vsitv.org/nov-kanal.html</item>
        <item>https://chas.tv/channel/ntv</item>
        <item>http://vsitv.org/ntn.html</item>
        <item>https://chas.tv/channel/pervyi</item>
        <item>https://chas.tv/channel/pyatnica</item>
        <item>https://chas.tv/channel/pyatyi</item>
        <item>https://chas.tv/channel/rentv</item>
        <item>https://chas.tv/channel/rossiya-1</item>
        <item>https://chas.tv/channel/rossiya-24</item>
        <item>https://chas.tv/channel/kultura</item>
        <item>https://chas.tv/channel/planeta-rtr</item>
        <item>http://vsitv.org/uastb.html</item>
        <item>https://chas.tv/channel/sts</item>
        <item>https://chas.tv/channel/sts-love</item>
        <item>https://chas.tv/channel/tv3</item>
        <item>https://chas.tv/channel/tvc</item>
        <item>https://chas.tv/channel/tnt</item>
        <item>http://vsitv.org/ukrana.html</item>
        <item>https://chas.tv/channel/che</item>
        <item>http://www.glaz.tv/online-tv/comedy-tv</item>
        <item>http://www.glaz.tv/online-tv/5-y-kanal</item>
        <item>http://freeonlinetv.at.ua/sport1.html</item>
        <item>http://freeonlinetv.at.ua/tonis.html</item>
        <item>http://freeonlinetv.at.ua/pixel-tv.html</item>
        <item>http://www.glaz.tv/online-tv/muz-tv</item>
        <item>http://www.glaz.tv/online-tv/paramount-comedy</item>
        <item>http://www.glaz.tv/online-tv/mtv-russia</item>
        <item>http://www.glaz.tv/online-tv/tv-xxi</item>
        <item>http://www.glaz.tv/online-tv/komediya-tv</item>
        <item>http://www.glaz.tv/online-tv/dom-kino</item>
    </string-array>
</resources>
