<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_chanels"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/title_nav_all_chanels" />
        <item
            android:id="@+id/nav_ua_chanels"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/title_nav_ua_chanels" />
        <item
            android:id="@+id/nav_ru_chanels"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/title_nav_ru_chanels" />
    </group>

    <item android:title="@string/title_nav_dodatkovo">
        <menu>
            <item
                android:id="@+id/nav_about_app"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/title_nav_about_app" />
        </menu>
    </item>

</menu>
